Fix overlapping ui in list entries

--- a/client/src/assets/BookListEntry.css
+++ b/client/src/assets/BookListEntry.css
@@ -33,5 +33,5 @@
 }
 
 .Entry-Text {
-    width: 12vw;
+    text-align: center;
 }
