--- a/client/src/assets/GenericListEntry.css
+++ b/client/src/assets/GenericListEntry.css
@@ -20,5 +20,6 @@
 }
 
 .Entry-Text {
-    width: 12vw;
+    text-align: center;
+    flex: 1 0 0; 
 }
